--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.course</groupId>
     <artifactId>Auto-Java-Test</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Chapter5</module>
+    </modules>
 
 
 </project>
