--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,17 @@
     <artifactId>Auto-Java-Test</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
     <modules>
         <module>Chapter5</module>
+        <module>Chapter6</module>
+        <module>Chapter9</module>
+        <module>Chapter10</module>
     </modules>
 
 
