--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>Chapter6</module>
         <module>Chapter9</module>
         <module>Chapter10</module>
+        <module>Chapter11</module>
     </modules>
 
 
